[package]
name = "dominion-server"
version = "0.1.0"
authors = ["circumspect <40770208+circumspect@users.noreply.github.com>"]
edition = "2021"
license = "AGPLv3"

[lib]
name = "dominion_server"
path = "src/lib.rs"

[[bin]]
name = "dominion-server"
path = "src/bin/main.rs"

[dependencies]
dominion = { git = "https://github.com/tireswing/dominion", branch = "main" }

anyhow = "1.0"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["codec"] }
